@@ -1,0 +1,12 @@
+LMB - select single unit
+LMB (hold) - activate rubber band selection
+LMB (flick) - move around the map
+Ctrl + LMB - select multiple units
+S - cancel order (stop)
+F - move fast
+M - move
+N - sneak
+A - attack
+K - smoke
+D - defend
+B - ambush
